<resources>
    <string name="app_name">About Inspiration</string>
    <string name="name">Nick Vujicic</string>
    <string name="yellow_star">Yellow Star</string>

    <string name="biography">Nick Vujicic was born to Dushka and Boris Vujicic in 1982 in Melbourne, Australia. Although he was an otherwise healthy baby, Nick was born without arms and legs; he had no legs, but two small feet, one of which had two toes. Nick has two siblings, Michelle and Aaron. Initially, a Victoria state law prevented Nick from attending a mainstream school due to his physical disability in spite of a lack of mental impairment. However, Vujicic became one of the first physically disabled students integrated into a mainstream school once those laws changed. However, his lack of limbs made him a target for school bullies, and he fell into a severe depression. At age eight, he contemplated suicide and even tried to drown himself in his bathtub at age ten; his love for his parents prevented him from following through. He also stated in his music video "Something More" that God had a plan for his life and he could not bring himself to drown because of this.
        \n\nNick prayed very hard that God would give him arms and legs, and initially told God that, if his prayer remained unanswered, Nick would not praise him indefinitely. However, a key turning point in his faith came when his mother showed him a newspaper article about a man dealing with a severe disability. Vujicic realized he wasn\'t unique in his struggles and began to embrace his lack of limbs. After this, Nick realized his accomplishments could inspire others and became grateful for his life.
        \n\nNick gradually figured out how to live a full life without limbs, adapting many of the daily skills limbed people accomplish without thinking. Nick writes with two toes on his left foot and a special grip that slid onto his big toe. He knows how to use a computer and can type up to 45 words per minute using the "heel and toe" method. He has also learned to throw tennis balls, play drum pedals, get a glass of water, comb his hair, brush his teeth, answer the phone and shave, in addition to participating in golf, swimming, and even sky-diving.
    </string>
    <string name="nick">Nick</string>
    <string name="nickname_question">What is his nickname?</string>
    <string name="done">Done</string>
</resources>